--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>questionario flexbox</title>
+	<title>Cuestionario flexbox</title>
 </head>
 <body>
+	<h1>Cuestionario flexbox</h1>
 	<h4>¿Qué comandos se utiliza para agregar un nuevo origen remoto?</h4>
 	<p>git remote add nombre-del-remoto url-del-remoto</p>
 	<h4>¿Qué propiedad se usa para definir un ancho base en un elemento flexbox?</h4>
